git overflow corrected

--- a/src/pages/Home/Appointement/Appointment.css
+++ b/src/pages/Home/Appointement/Appointment.css
@@ -1,7 +1,6 @@
-.appointment-section{
-    margin-top: 200px;
-}
+
 .appoinment{
     background-image: url('https://i.ibb.co/S0qGqzz/bg-appointment.jpg');
     height: 100vh;
+    background-size: cover;
 }
